# soepe13-be-project

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.html  README.md  ect60-profile-overview.ods  ect60_eeprom.hex
.github/workflows/: latex.yaml  ros2.yaml  scripts.yaml
latex/resources/drawio/: free_body_diagram.drawio  mechanical_system.drawio  ros_ecat_server.drawio
latex/texfiles/: 00-acknowledgments.tex  00-preface.tex  01-abstract.tex  02-list-of-figures.tex  03-list-of-tables.tex  04-list-of-symbols.tex  10-introduction.tex  11-literature-review.tex  20-body.tex  30-experiments.tex  40-conclusion.tex  41-future-scope.tex  initial-project-description.tex  main.aux  main.lof  main.lot  main.out  main.tex  soepe13preamble.sty  titlepage.tex  wordlist.tex
matlab/: step_to_tf.m  testdata.txt  to_dtf.m  to_dtf.prj  working_script.m
mech/stl/: encoder_gear.stl  motor_belt_guide_side0.stl  motor_belt_guide_side1.stl  motor_belt_guide_side2.stl  motor_belt_guide_side3.stl  motor_encoder_mount.stl  motor_encoder_mount_support.stl  motor_gear.stl  pulley_runner_22mm.stl  pulley_runner_28mm.stl  tensioner.stl  track_bridge_part.stl
ros2/: 00-ros-eclipse-include-paths.xml  test.cpp
ros2/src/ecat-server/: CMakeLists.txt  package.xml
ros2/src/ecat-server/src/: ecat-server-node.cpp
ros2/src/ecat_bringup/: CMakeLists.txt  package.xml
ros2/src/ecat_bringup/launch/: default.launch.py
ros2/src/ecat_esi_parser/: package.xml  setup.cfg  setup.py
ros2/src/ecat_esi_parser/ecat_esi_parser/: esi_parser.py  main.py
ros2/src/ecat_interfaces/: CMakeLists.txt  package.xml
ros2/src/ecat_interfaces/action/: ExecuteMove.action
ros2/src/ecat_interfaces/msg/: EcatCoeMailboxMsg.msg  EcatDCMsg.msg  EcatDataTypeMsg.msg  EcatDescriptionMsg.msg  EcatDictionaryMsg.msg  EcatEEPROMMsg.msg  EcatGroupMsg.msg  EcatGroupNameMsg.msg  EcatMailboxMsg.msg  EcatOpModeMsg.msg  EcatProfileMsg.msg  EcatTest.msg  Parameter.msg
ros2/src/ecat_interfaces/srv/: GetParameters.srv  GetSlaveConfigurations.srv  NetworkCtrl.srv  SetParameters.srv
ros2/src/ecat_server/: CMakeLists.txt  package.xml
ros2/src/ecat_server/include/ecat_server/: ecat_server.hpp  generic_od.hpp  rtelligent_ect60.hpp  rtelligent_ect60_od.hpp  soem_impl.hpp  soem_impl.tpp
ros2/src/ecat_server/src/: ecat_server.cpp  main.cpp  rtelligent_ect60.cpp  soem_impl.cpp
ros2/src/rqt_ecat_dashboard/: package.xml  plugin.xml  setup.cfg  setup.py
ros2/src/rqt_ecat_dashboard/resource/: ecat_dashboard.ui  ecat_devices.ui
ros2/src/rqt_ecat_dashboard/src/rqt_ecat_dashboard/: configuration_device_item.py  ecat_dashboard.py  ecat_dashboard_widget.py  ecat_devices_widget.py  ecat_esi_description.py  esi_parser.py  main.py
scripts/: build-latex.sh  build-ros.sh  ecat-desc-parser.py
scripts/ecat_esi_parser/: ecat_esi_classes.py  ecat_esi_parser.py
scripts/ecat_esi_parser/generated-ros/msg/: EcatDeviceEscMsg.msg  EcatDeviceMsg.msg  EcatDeviceTypeMsg.msg  EcatDictionaryObjectMsg.msg  EcatInfoSubItemMsg.msg  EcatPDOMsg.msg  EcatSubDataTypeMsg.msg
scripts/ethercat_grant/: install.sh
scripts/ros2/: install.sh  post-install.sh
scripts/soem/: install.sh
